Akeeba Remote CLI 2.3.5
================================================================================
~ Workaround for utf8_encode and _decode being deprecated in PHP 8.2

Akeeba Remote CLI 2.3.4
================================================================================
# [HIGH] Download after backup fails if the backup completes in a single step

Akeeba Remote CLI 2.3.3
================================================================================
~ Allow force–setting the component, format and view from the endpoint URL

Akeeba Remote CLI 2.3.2
================================================================================
~ Updated cacert.pem. The file will be kept up-to-date using Composer.
# [HIGH] Backup for WordPress and Solo would fail if you used remote.php as the endpoint.

Akeeba Remote CLI 2.3.1
================================================================================
~ Minimum PHP version is now 7.2.0
~ Support for PHP 8.0
# [MEDIUM] fopen network connection adapter was broken

Akeeba Remote CLI 2.3.0
================================================================================
~ Support for remote backup JSON API version 2
~ Changed User Agent string to AkeebaRemoteCLI/2.3.0

Akeeba Remote CLI 2.2.0
================================================================================
- Removed support for encapsulations other than RAW
# Download after backup was broken with newer Akeeba Backup / Akeeba Solo versions

Akeeba Remote CLI 2.1.1
================================================================================
+ `--certificate` option allows you to specify self-signed SSL certificates
# Downloading archives without specifying a part number was broken
# Using local configuration files wouldn't work under PHP 7.4

Akeeba Remote CLI 2.1.0
================================================================================
+ Automatically detect the correct encapsulation. The --encapsulation option is ignored.